--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Bem Vinde ao cursinho da PN
-description: O cursinho pré-engenharia da PN é oferecido pelo coletivo PoliNegra para alunos PPI's da Escola Politécnica da Universidade de São Paulo.
+title: Bem vinde ao curso pré engenharia da PN!
+description: Página Inicial
 template: splash
 hero:
-  tagline: O cursinho pré-engenharia da PN é oferecido pelo coletivo PoliNegra para alunos PPI's da Escola Politécnica da Universidade de São Paulo.
+  tagline: O curso pré engenharia da PN é oferecido pelo coletivo PoliNegra para alunos PPI's da Escola Politécnica da Universidade de São Paulo.
   image:
     file: ../../assets/LogoCinza.png
   actions:
